--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -46,7 +46,7 @@
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
-                    <span>Dashboard</span></a>
+                    <span>Tổng quan</span></a>
             </li>
 
             <!-- Divider -->
