--- a/views/admin/products/index.hbs
+++ b/views/admin/products/index.hbs
@@ -66,7 +66,7 @@
                                 <tr class="odd">
                                     <td class="sorting_1">{{id}}</td>
                                     <td>{{name}}</td>
-                                    <td>{{image}}</td>
+                                    <td><img style="width:100px;height:100px" src="/img/upload/{{image}}" alt=""></td>
                                     <td>{{quanlity}}</td>
                                     <td>{{size}}</td>
                                     <td>{{price}} VNĐ</td>
