--- a/views/partials/frontend/header.hbs
+++ b/views/partials/frontend/header.hbs
@@ -129,7 +129,7 @@
 								<li class="dropdown"><a href="#">Cửa hàng<i class="fa fa-angle-down"></i></a>
                                     <ul role="menu" class="sub-menu">
                                         <li><a href="/product">Sản phẩm</a></li>
-										<li><a href="/product-detail">Chi tiết sản phẩm</a></li> 
+										{{!-- <li><a href="/product-detail">Chi tiết sản phẩm</a></li>  --}}
 										<li><a href="/checkout">Thanh toán</a></li> 
 										<li><a href="/cart">Giỏ hàng</a></li> 
 										<li><a href="/login">Đăng nhập</a></li> 
