--- a/views/partials/frontend/product-detail.hbs
+++ b/views/partials/frontend/product-detail.hbs
@@ -1,4 +1,35 @@
-<section>
+
+
+	<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <title>{{title}}</title>
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/font-awesome.min.css" rel="stylesheet">
+  <link href="css/prettyPhoto.css" rel="stylesheet">
+  <link href="css/price-range.css" rel="stylesheet">
+  <link href="css/animate.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
+  <link href="css/responsive.css" rel="stylesheet">
+  <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+    <script src="js/respond.min.js"></script>
+    <![endif]-->
+  <link rel="shortcut icon" href="images/ico/favicon.ico">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+</head>
+<!--/head-->
+
+    {{> header }}
+    <section>
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-3">
@@ -131,7 +162,7 @@
 					<div class="product-details"><!--product-details-->
 						<div class="col-sm-5">
 							<div class="view-product">
-								<img src="images/product-details/1.jpg" alt="">
+								<img src="/img/upload/{{image}}" alt="">
 								<h3>ZOOM</h3>
 							</div>
 							<div id="similar-product" class="carousel slide" data-ride="carousel">
@@ -166,27 +197,30 @@
 							</div>
 
 						</div>
+					
 						<div class="col-sm-7">
+								{{!-- {{#each data}} --}}
 							<div class="product-information"><!--/product-information-->
-								<img src="images/product-details/new.jpg" class="newarrival" alt="">
-								<h2>Anne Klein Sleeveless Colorblock Scuba</h2>
-								<p>Web ID: 1089772</p>
-								<img src="images/product-details/rating.png" alt="">
+								<img src="img/upload/{{image}}" class="newarrival" alt="">
+								<h2>{{name}}</h2>
+								{{!-- <p>Web ID: 1089772</p> --}}
+								<img src="img/upload/{{image}}" alt="">
 								<span>
-									<span>2.000.000 VND</span>
+									<span>{{price}} VND</span>
 									<label>Số lượng:</label>
-									<input type="text" value="3">
+									<input type="text" value="{{price}}">
 									<button type="button" class="btn btn-fefault cart">
 										<i class="fa fa-shopping-cart"></i>
 										Thêm vào giỏ hàng
 									</button>
 								</span>
-								<p><b>Trạng thái:</b> Trong kho</p>
+								{{!-- <p><b>Trạng thái:</b> Trong kho</p>
 								<p><b>Tình trạng:</b> Mới</p>
-								<p><b>Thương hiệu:</b> E-SHOPPER</p>
-								<a href=""><img src="images/product-details/share.png" class="share img-responsive" alt=""></a>
+								<p><b>Thương hiệu:</b> E-SHOPPER</p> --}}
+								<a href=""><img src="img/upload/{{image}}" class="share img-responsive" alt=""></a>
 							</div><!--/product-information-->
 						</div>
+						{{!-- {{/each}} --}}
 					</div><!--/product-details-->
 					
 					<div class="category-tab shop-details-tab"><!--category-tab-->
@@ -474,3 +508,12 @@
 			</div>
 		</div>
 	</section>
+    {{>footer}}
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.scrollUp.min.js"></script>
+<script src="js/price-range.js"></script>
+<script src="js/jquery.prettyPhoto.js"></script>
+<script src="js/main.js"></script>
+
+</html>
