--- a/views/admin/products/index.hbs
+++ b/views/admin/products/index.hbs
@@ -82,6 +82,15 @@
                         </table>
                     </div>
                 </div>
+                <nav style="margin-left: 83%;" aria-label="Page navigation example">
+  <ul  class="pagination">
+    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item"><a class="page-link" href="#">Next</a></li>
+  </ul>
+</nav>
                 {{!-- <div class="row">
                     <div class="col-sm-12 col-md-5">
                         <div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">Showing 1 to
