--- a/views/admin/products/create.hbs
+++ b/views/admin/products/create.hbs
@@ -14,25 +14,24 @@
             <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
                 <form action="./create" method="post" id="createForm" enctype="multipart/form-data">
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Name</label>
+                        <label for="exampleInputEmail1">Name products</label>
                         <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                            placeholder="Enter email" name="name" value="{{name}}">
-                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
-                            else.</small>
+                            placeholder="" name="name" value="{{name}}">
+                        <small id="emailHelp" class="form-text text-muted"></small>
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Quanlity</label>
-                        <input type="quanlity" class="form-control" id="exampleInputPassword1" placeholder="Password"
+                        <input type="quanlity" class="form-control" id="exampleInputPassword1" placeholder=""
                             name="quanlity" value="{{quanlity}}">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Size</label>
-                        <input type="number" class="form-control" id="exampleInputPassword1" placeholder="Password"
+                        <input type="text" class="form-control" id="exampleInputPassword1" placeholder=""
                             name="size" value="{{size}}">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">Price</label>
-                        <input type="number" class="form-control" id="exampleInputPassword1" placeholder="Password"
+                        <input type="number" class="form-control" id="exampleInputPassword1" placeholder=""
                             name="price" value="{{price}}">
                     </div>
                     <div class="form-group">
