--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,7 +30,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>{{title}}</title>
+  {{!-- <title>{{title}}</title> --}}
+  <title>Home | E-Shopper</title>
   <link href="/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/font-awesome.min.css" rel="stylesheet">
   <link href="/css/prettyPhoto.css" rel="stylesheet">
