--- a/views/partials/frontend/login.hbs
+++ b/views/partials/frontend/login.hbs
@@ -1,34 +1,42 @@
-<section id="form"><!--form-->
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-4 col-sm-offset-1">
-					<div class="login-form"><!--login form-->
-						<h2>Đăng nhập vào tài khoản của bạn</h2>
-						<form action="#">
-							<input type="text" placeholder="Tên">
-							<input type="email" placeholder="Địa chỉ email">
-							<span>
-								<input type="checkbox" class="checkbox"> 
-								Giữ cho tôi đăng nhập
-							</span>
-							<button type="submit" class="btn btn-default">Đăng nhập</button>
-						</form>
-					</div><!--/login form-->
+<section id="form">
+	<!--form-->
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-4 col-sm-offset-1">
+				<div class="login-form">
+					<!--login form-->
+					<h2>Đăng nhập vào tài khoản của bạn</h2>
+					<form id="loginUserForm" action="#">
+						<input id="loginEmail" type="email" placeholder="Địa chỉ email">
+						<input id="loginPass" type="password" placeholder="Mật khẩu">
+						<span>
+							<input type="checkbox" class="checkbox">
+							Giữ cho tôi đăng nhập
+						</span>
+						<button type="submit" class="btn btn-default">Đăng nhập</button>
+					</form>
 				</div>
-				<div class="col-sm-1">
-					<h2 class="or">Hoặc</h2>
+				<!--/login form-->
+			</div>
+			<div class="col-sm-1">
+				<h2 class="or">Hoặc</h2>
+			</div>
+			<div class="col-sm-4">
+				<div class="signup-form">
+					<!--sign up form-->
+					<h2>Đăng ký người dùng mới!</h2>
+					<form id="registerUserForm" action="#">
+						<input id="registerName" type="text" placeholder="Tên">
+						<input id="registerEmail" type="email" placeholder="Địa chỉ email">
+						<input id="registerPass" type="password" placeholder="Mật khẩu">
+						<button type="submit" class="btn btn-default">Đăng ký</button>
+					</form>
 				</div>
-				<div class="col-sm-4">
-					<div class="signup-form"><!--sign up form-->
-						<h2>Đăng ký người dùng mới!</h2>
-						<form action="#">
-							<input type="text" placeholder="Tên">
-							<input type="email" placeholder="Địa chỉ email">
-							<input type="password" placeholder="Mật khẩu">
-							<button type="submit" class="btn btn-default">Đăng ký</button>
-						</form>
-					</div><!--/sign up form-->
-				</div>
+				<!--/sign up form-->
 			</div>
 		</div>
-	</section>
+	</div>
+</section>
+<script src="js/user/auth.js">
+
+</script>
