--- a/views/partials/admin/sidebar.hbs
+++ b/views/partials/admin/sidebar.hbs
@@ -111,12 +111,12 @@
     </div>
 
     <li class="nav-item">
-        <a class="nav-link" href="/admin/product">
+        <a class="nav-link" href="product">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Danh sách sản phẩm</span></a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="/admin/product/create">
+        <a class="nav-link" href="product/create">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Thêm sản phẩm</span></a>
     </li>
